Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9369

IN operator with ( num, NULL ) gives inconsistent result

    XMLWordPrintable

Details

    • 5.5.48-0, 10.1.13

    Description

      Output:

      mysql> select (1,null) not in ((2,2),(3,3)), (1,null) not in ((2,2)), (1,null) not in ((3,3));
      +-------------------------------+-------------------------+-------------------------+
      | (1,null) not in ((2,2),(3,3)) | (1,null) not in ((2,2)) | (1,null) not in ((3,3)) |
      +-------------------------------+-------------------------+-------------------------+
      |                          NULL |                       1 |                       1 |
      +-------------------------------+-------------------------+-------------------------+
      1 row in set (0.00 sec)
       
      mysql> select version();
      +-----------------+
      | version()       |
      +-----------------+
      | 10.1.10-MariaDB |
      +-----------------+
      1 row in set (0.00 sec)

      Recreate:

      select (1,null) not in ((2,2),(3,3)), (1,null) not in ((2,2)), (1,null) not in ((3,3));

      Problem:
      ========
      (1,null) not in ((2,2),(3,3)) is expected to return true.

      Attachments

        Activity

          People

            bar Alexander Barkov
            dylan Dylan Su
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 2.5h
                2.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.